# similarity

./: .rustfmt.toml  CLAUDE.md  Cargo.toml
.cargo/: audit.toml
crates/core/: Cargo.toml
crates/core/benches/: function_comparison.rs  tsed_benchmark.rs
crates/core/examples/: performance_test.rs
crates/core/src/: apted.rs  class_comparator.rs  class_extractor.rs  cli_file_utils.rs  css_structure_adapter.rs  enhanced_similarity.rs  fast_similarity.rs  function_extractor.rs  generic_overlap_detector.rs  generic_tree_sitter_parser.rs  lib.rs  overlap_detector.rs  parser.rs  rust_structure_adapter.rs  structure_comparator.rs  structure_comparator_tests.rs  subtree_fingerprint.rs  tsed.rs  type_comparator.rs  type_extractor.rs  type_fingerprint.rs  type_normalizer.rs  typescript_structure_adapter.rs  unified_type_comparator.rs
crates/core/tests/: debug_similarity.rs  false_positive_tests.rs  function_similarity_test.rs  overlap_detection_test.rs  parent_child_test.rs
crates/similarity-css/: Cargo.toml
crates/similarity-css/src/: css_comparator.rs  duplicate_analyzer.rs  lib.rs  main.rs  parser.rs  scss_flattener.rs  scss_simple_flattener.rs  shorthand_expander.rs  specificity.rs
crates/similarity-css/tests/: bem_detection_test.rs  comparator_test.rs  css_edge_cases_test.rs  edge_cases_test.rs  integration_test.rs  parser_test.rs  performance_analysis_test.rs  performance_test.rs  real_world_test.rs  scss_complex_test.rs  shorthand_integration_test.rs  shorthand_test.rs
crates/similarity-elixir/: Cargo.toml
crates/similarity-elixir/src/: check.rs  elixir_parser.rs  main.rs  parallel.rs
crates/similarity-generic/: Cargo.toml
crates/similarity-generic/src/: check.rs  language_util.rs  main.rs  parallel.rs
crates/similarity-generic/tests/: cli_options_test.rs  cross_file_test.rs  directory_test.rs  multi_language_test.rs
crates/similarity-md/: Cargo.toml
crates/similarity-md/benches/: markdown_similarity_benchmark.rs
crates/similarity-md/examples/: morphological_test.rs
crates/similarity-md/src/: levenshtein.rs  main.rs  markdown_parser.rs  morphological_similarity.rs
crates/similarity-php/: Cargo.toml
crates/similarity-php/src/: check.rs  parallel.rs  php_parser.rs
crates/similarity-py/: Cargo.toml
crates/similarity-py/src/: check.rs  main.rs  parallel.rs  python_parser.rs
crates/similarity-py/tests/: similarity_detection_test.rs
crates/similarity-rs/: Cargo.toml
crates/similarity-rs/src/: check.rs  check_types.rs  main.rs  rust_parser.rs
crates/similarity-rs/tests/: debug_ast.rs  false_positive_test.rs  integration_test.rs  skip_test_option.rs  test_ast_comparison.rs  test_compare_values_debug.rs  test_debug_rename_cost.rs  test_full_function_similarity.rs  test_realistic_patterns.rs  test_rename_zero.rs  test_rust_patterns.rs  test_size_penalty_effect.rs  test_struct_similarity.rs  test_tsed_debugging.rs
crates/similarity-ts/: Cargo.toml
crates/similarity-ts/benches/: parallel_benchmark.rs
crates/similarity-ts/src/: check.rs  main.rs  parallel.rs  sequential.rs  typescript_parser.rs
crates/similarity-ts/tests/: integration_test.rs  test_type_similarity.rs
docs/other/: KNOWN_ISSUES.md  RECOMMENDATIONS.md  RELEASE_NOTES.md  TODO.md
