[package]
name = "similarity-core"
version = "0.4.2"
edition = "2024"
license = "MIT"
description = "Core library for code similarity detection using AST-based comparison"
authors = ["mizchi"]
repository = "https://github.com/mizchi/similarity"
homepage = "https://github.com/mizchi/similarity"
documentation = "https://docs.rs/similarity-core"
keywords = ["typescript", "javascript", "similarity", "ast", "refactoring"]
categories = ["development-tools", "parser-implementations"]

[dependencies]
oxc_parser = { workspace = true }
oxc_ast = { workspace = true }
oxc_span = { workspace = true }
oxc_allocator = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tree-sitter = { workspace = true }
tree-sitter-go = { workspace = true }
tree-sitter-java = { workspace = true }
tree-sitter-c = { workspace = true }
tree-sitter-cpp = { workspace = true }
tree-sitter-c-sharp = { workspace = true }
tree-sitter-ruby = { workspace = true }
rayon = "1.10"
ignore = "0.4"
anyhow = "1.0"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "tsed_benchmark"
harness = false

[[bench]]
name = "function_comparison"
harness = false

# Examples removed - language-specific examples moved to respective crates