[package]
name = "similarity-css"
version = "0.4.2"
edition = "2024"
authors = ["similarity contributors"]
description = "CSS/SCSS similarity detection tool (experimental)"
license = "MIT"
repository = "https://github.com/mizchi/similarity"

[dependencies]
similarity-core = { version = "0.4.2", path = "../core" }
clap = { version = "4.0", features = ["derive"] }
tree-sitter = "0.26"
tree-sitter-css = "0.23"
tree-sitter-scss = "1.0"
rayon = "1.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
indexmap = "2.0"
ignore = "0.4"

[dev-dependencies]
tempfile = "3.5"
insta = "1.29"