[package]
name = "similarity-generic"
version = "0.4.2"
edition = "2024"
license = "MIT"
description = "Generic language similarity analyzer using tree-sitter"
authors = ["mizchi"]
repository = "https://github.com/mizchi/similarity"
build = "build.rs"

[[bin]]
name = "similarity-generic"
path = "src/main.rs"

[dependencies]
similarity-core = { version = "0.4.2", path = "../core" }
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
tree-sitter = { workspace = true }
tree-sitter-go = { workspace = true }
tree-sitter-java = { workspace = true }
tree-sitter-c = { workspace = true }
tree-sitter-cpp = { workspace = true }
tree-sitter-c-sharp = { workspace = true }
tree-sitter-ruby = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.21"
rayon = "1.10"
ignore = "0.4"
globset = "0.4"

[build-dependencies]
serde_json = "1.0"
once_cell = "1.21"

[dev-dependencies]
tempfile = "3.0"
assert_cmd = "2.0"
predicates = "3.0"