[package]
name = "similarity-py"
version = "0.4.2"
edition = "2024"
license = "MIT"
description = "CLI tool for detecting code duplication in Python projects"
authors = ["mizchi"]
repository = "https://github.com/mizchi/similarity"
homepage = "https://github.com/mizchi/similarity"
documentation = "https://docs.rs/similarity-py"
keywords = ["python", "duplicate", "detection", "cli", "similarity"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "similarity-py"
path = "src/main.rs"

[lib]
name = "similarity_py"

[dependencies]
similarity-core = { version = "0.4.2", path = "../core" }
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
walkdir = "2.5"
ignore = "0.4"
rayon = "1.10"
tree-sitter = { workspace = true }
tree-sitter-python = { workspace = true }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
tempfile = "3.0"