[package]
name = "similarity-ts"
version = "0.4.2"
edition = "2024"
license = "MIT"
description = "CLI tool for detecting code duplication in TypeScript/JavaScript projects"
authors = ["mizchi"]
repository = "https://github.com/mizchi/similarity"
homepage = "https://github.com/mizchi/similarity"
documentation = "https://docs.rs/similarity-ts"
keywords = ["typescript", "javascript", "duplicate", "detection", "cli"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "similarity-ts"
path = "src/main.rs"

[dependencies]
similarity-core = { version = "0.4.2", path = "../core" }
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
walkdir = "2.5"
ignore = "0.4"
globset = "0.4"
rayon = "1.10"
oxc_parser = { workspace = true }
oxc_ast = { workspace = true }
oxc_span = { workspace = true }
oxc_allocator = { workspace = true }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
tempfile = "3.0"
criterion = "0.5"
rayon = "1.10"

[[bench]]
name = "parallel_benchmark"
harness = false